adding deploy script